feat: bulletin out by id
